test/errors/simple.js
throw new Error('simple.js');